--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/donovan/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Donovan is a flexible, yet easy-to-use blogging theme with a clean and modern design. It features an elegant mobile-first design, three different blog layouts and extensive post settings. Donovan is perfect for your personal blog or for any content-focused website.
-Version: 1.2
+Version: 1.2.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: donovan
@@ -1714,12 +1714,11 @@ object {
 ## Captions
 --------------------------------------------------------------*/
 .wp-caption {
-	margin-bottom: 1em;
+	margin-bottom: 0.5em;
 	max-width: 100%;
 	font-size: 15px;
 	font-size: 0.9375rem;
 	color: rgba(0, 0, 0, 0.6);
-	width: auto !important;
 }
 
 .wp-caption img[class*="wp-image-"] {
